new file ad potato

--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@
         <header>
             <h1>НОВОСТИ</h1>
         </header>
+
+        <section class="news">
+            <article>
+                <a href="/pages/day vicrory.html">
+                    <h2>День победы</h2>
+                </a>
+                <div class="article-meta">
+                    Опубликовал <a href="#">Санька Пашовкин</a>
+                    9 мая 2023
+                </div>
+            </article>
+        </section>
         <footer>
             <div class="links">
             <a href="#">Вакансии</a>
             <a href="#">Контакты</a>
             <a href="#">О нас</a>
-            <a href="#">Реклама</a></div>
-
+            <a href="/pages/ad.html">Реклама</a></div>
             <div class="copyright">Быстроновости</div>
         </footer>
     </body>
