--- a/index.html
+++ b/index.html
@@ -7,12 +7,59 @@
         <header>
             <h1>НОВОСТИ</h1>
         </header>
-
         <section class="news">
             <article>
                 <a href="/pages/day vicrory.html">
                     <h2>День победы</h2>
                 </a>
+                <h3>Торжества в честь 78-й годовщины Победы сегодня по всей стране...</h3>
+                <img src="/images/Victory_Day.jpg" alt="день победы">
+                <div class="article-meta">
+                    Опубликовал <a href="#">Санька Пашовкин</a>
+                9 мая 2023
+                </div>
+            </article>
+        </section>
+        <section class="news2">
+            <article>
+                <a href="#"><h2>Время собирать урожай</h2></a>
+                <img src="/images/посевные.jpg" alt="тут должна быть картошка">
+                <h3>В Армении начался сбор урожая клубники...</h3>
+                <div class="article-meta">
+                    Опубликовал <a href="#">Санька Пашовкин</a>
+                    10 мая 2023
+                </div>
+            </article>
+        </section>
+        <section class="news3">
+            <article>
+                <a href="#">
+                    <img src="/images/ярмарка красl.jpg" alt="тут должен быть парк">
+                    <h2>В администрации Краснодара прокомментировали строительство скандальной ярмарки на Героев Разведчиков</h2></a>
+                <h3>Зеленый газон превращают в ярмарку. В окна к нам прилетит пыль, грязь...</h3>
+                <div class="article-meta">
+                    Опубликовал <a href="#">Санька Пашовкин</a>
+                    9 мая 2023
+                </div>
+            </article>
+        </section>
+        <section class="news4">
+            <article>
+                <a href="#">
+                    <h2>В Геленджике женщина напала на возлюбленного, когда тот пришел к ней мириться</h2></a>
+                    <h3>Инцидент произошел в майский выходной день<a href="#">...</a></h3>
+                    <img src="/images/нападение геленджик.jpg" alt="18+">
+                <div class="article-meta">
+                    Опубликовал <a href="#">Санька Пашовкин</a>
+                    9 мая 2023
+                </div>
+            </article>
+        </section>
+        <section class="news5">
+            <article>
+                <a href="#"><h2>Зарплата 50% жителей Кубани к 2035 году вырастет до 100 тысяч рублей</h2></a>
+                <h3>100 тысяч рублей в месяц будут зарабатывать 50% жителей Кубани через 11,8 лет<a href="#">...</a></h3>
+                <img src="/images/деньги.jpg" alt="бабки">
                 <div class="article-meta">
                     Опубликовал <a href="#">Санька Пашовкин</a>
                     9 мая 2023
